src/main/java/com/example/trackmenegment/validator/UserBalanceValidator.java
package com.example.trackmenegment.validator;

import com.example.trackmenegment.dto.req.UserBalanceReqDto;
import org.springframework.stereotype.Component;

@Component
public class UserBalanceValidator {
    public void validateForCreate(UserBalanceReqDto dto) {

    }
}
